--- a/JEEMain_login.html
+++ b/JEEMain_login.html
@@ -108,7 +108,7 @@
             <div id="copyright">
                 <div class="container">
                     <div class="col-md-12">
-                        <p class="text-center">&copy; 2019 Inspire Academy</p>
+                        <p class="text-center">&copy; 2019 Inspire Academy                          Powered By : Aman Gupta</p>
                     </div>
                 </div>
             </div>
