--- a/JEEMain_login.html
+++ b/JEEMain_login.html
@@ -107,7 +107,7 @@
                                             if ($txtUsername.value='inspire') {
                                                 if ($txtPassword.value='inspire') {
 
-                                                   window.location.href = "Quiz/Instruction_jee.html?type=" + window.location.search.split("?")[1].split('=')[1]);
+                                                   echo "hii";
                                                 }
                                                 else{
                                                     echo "Incorrect Password";
